vk-tensorflow-demo/docker-compose/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.14.0 (fa706f2)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - image: web
        name: web
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
