vk-tensorflow-demo/docker-compose/worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.14.0 (fa706f2)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: worker
    spec:
      containers:
      - env:
        - name: API_BASE_URL
          value: http://rbitia.com
        image: rbitia/tensorworker
        name: worker
        resources: {}
      restartPolicy: Always
status: {}
