vk-tensorflow-demo/docker-compose/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: rbitia.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
